[package]
name = "bevy_tilemap_benchmarks"
version = "0.1.0"
authors = ["Forb.Jok <forbjok@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", rev = "eb299daf347fd135149c7135b4b2a60b7b4c4f4f" }
bevy_tilemap = "0.4.0"
