[package]
name = "bevy_tilemap_benchmarks"
version = "0.1.0"
authors = ["Forb.Jok <forbjok@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.0"
bevy_ecs_tilemap = "0.5.0"
#bevy_tilemap = "0.4.0"
